# pppoedi

./: .gitignore  AUTHORS  README.md  meson.build
data/: br.inf.ufes.lar.pppoedi.Service.service  br.inf.ufes.lar.pppoedi.Service.service.in  br.inf.ufes.lar.pppoedi.conf  br.inf.ufes.lar.pppoedi.desktop  br.inf.ufes.lar.pppoedi.desktop.in  br.inf.ufes.lar.pppoedi.gschema.xml  meson.build
data/systemd/: br.inf.ufes.lar.pppoedi.Service.service.in  meson.build
debian/: changelog  control  copyright  rules
meson/: post_install.py
service/: Service.vala  meson.build
src/: Application.vala  Connection.vala  Constants.vala  MainWindow.vala  Settings.vala  User.vala  Utils.vala  meson.build
src/Exceptions/: ConnectionException.vala  FileException.vala  ServiceException.vala
