install_data(
    'br.inf.ufes.lar.pppoedi' + '.desktop',
    install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data(
    'br.inf.ufes.lar.pppoedi' + '.gschema.xml',
    install_dir: join_paths(get_option('datadir'), 'glib-2.0', 'schemas')
)

install_data(
    'br.inf.ufes.lar.pppoedi' + '.Service' + '.service',
    install_dir: join_paths(get_option('datadir'), 'dbus-1', 'system-services')
)

install_data(
    'br.inf.ufes.lar.pppoedi' + '.conf',
    install_dir: join_paths(get_option('sysconfdir'), 'dbus-1', 'system.d')
)
